# stk

./: .gitignore  README  run.py  stk.code-workspace
config/: cfg_stk.py  config.json
config/daily_holding/: asset_list.json  parse_daily_holdings.py  stock_info_test.json
config/sample/: 000001.SZ.csv  SH601611_20170106_by_transaction.csv  sh600000_20250603_by_3s.csv
config/sample/L2/: README  撤单说明.txt
config/sample/L2/20170103/000001.SZ/: 委托队列.csv  行情.csv  逐笔委托.csv  逐笔成交.csv
config/sample/L2/20170103/600000.SH/: 委托队列.csv  行情.csv  逐笔成交.csv
config/sample/L2/20190102/000001.SZ/: 委托队列.csv  行情.csv  逐笔委托.csv  逐笔成交.csv
config/sample/L2/20190102/600000.SH/: 委托队列.csv  行情.csv  逐笔成交.csv
config/sample/L2/20200102/000001.SZ/: 委托队列.csv  行情.csv
config/sample/L2/20200102/600000.SH/: 委托队列.csv  行情.csv  逐笔成交.csv
config/sample/L2/20210104/000001.SZ/: 行情.csv
config/sample/L2/20210104/600000.SH/: 行情.csv  逐笔成交.csv
config/sample/L2/20220104/000001.SZ/: 行情.csv
config/sample/L2/20220104/600000.SH/: 行情.csv  逐笔委托.csv  逐笔成交.csv
config/sample/L2/20240102/000001.SZ/: 行情.csv
config/sample/L2/20240102/600000.SH/: 行情.csv  逐笔委托.csv  逐笔成交.csv
cpp/: .gitignore  CMakeLists.txt  build.bat  build.sh  l2_database
cpp/include/: AnalysisHighFrequency.hpp  AnalysisTechnical.hpp  LimitOrderBook.hpp  technical_analysis.hpp
cpp/include/codec/: L1_DataType.hpp  L2_DataType.hpp  L2_Gateway_DataType.hpp  README  binary_decoder_L1.hpp  binary_decoder_L2.hpp  binary_dict_L2.hpp  binary_encoder_L1.hpp  binary_encoder_L2.hpp  delta_encoding.hpp  json_config.hpp
cpp/include/codec/compress_algo/: README.md  base_compressor.hpp  bitpack_compressor.hpp  column_compressor.hpp  compression.hpp  custom_compressor.hpp  dictionary_compressor.hpp  rle_compressor.hpp
cpp/include/codec/parallel/: processing_config.hpp  processing_types.hpp  workers.hpp
cpp/include/define/: Dtype.hpp  FastBitmap.hpp  MemPool.hpp
cpp/include/define/MemPool/: README.md
cpp/include/features/: CoreCrosssection.hpp  CoreSequential.hpp  FeaturesDefine.hpp  FeaturesHour.hpp  FeaturesMinute.hpp  FeaturesTick.hpp  OrderFlow.hpp  QualityCheck.md  README.md
cpp/include/features/FeaturesHour/: Hour_Sequential.hpp
cpp/include/features/FeaturesMinute/: Minute_Sequential.hpp
cpp/include/features/FeaturesTick/: Tick_Sequential.hpp
cpp/include/features/backend/: FeatureStore.hpp  FeatureStoreConfig.hpp  FeatureStoreDemo.hpp  Features.hpp  FeaturesConfig.hpp
cpp/include/label/: LabelCalmar.hpp
cpp/include/lob/: LimitOrderBook.hpp  LimitOrderBookDefine.hpp  lob.hpp  mem_pool.hpp
cpp/include/math/: LimitOrderBook.hpp
cpp/include/math/autoencoder/: README  VariationalAE.hpp
cpp/include/math/feature/: LOB.md  LimitOrderBook.hpp  OrderQueue.hpp  README.md
cpp/include/math/model/: README
cpp/include/math/normalize/: README  RollingZScore.hpp
cpp/include/math/sample/: ResampleRunBar.hpp
cpp/include/mining/: README.md
cpp/include/misc/: logging.hpp  progress_parallel.hpp
cpp/include/worker/: crosssectional_worker.hpp  encoding_worker.hpp  io_worker.hpp  sequential_worker.hpp  shared_state.hpp
cpp/package/zstd-1.5.7/: libzstd.so.1  libzstd.so.1.5.7
cpp/projects/L2_database/: CMakeLists.txt  build.sh
cpp/projects/main/: CMakeLists.txt  build.sh
cpp/projects/main_csv/: CMakeLists.txt
cpp/src/: L2_database.cpp  json_config.cpp  main.cpp  main_csv.cpp  technical_analysis.cpp
cpp/src/codec/: binary_decoder_L1.cpp  binary_decoder_L2.cpp  binary_encoder_L1.cpp  binary_encoder_L2.cpp  binary_parser_L1.cpp  json_config.cpp
cpp/src/codec/compress_algo/: compression.cpp
cpp/src/codec/parallel/: processing_types.cpp  workers.cpp
cpp/src/misc/: file_convert.cpp  logging.cpp
cpp/src/worker/: crosssectional_worker.cpp  encoding_worker.cpp  io_worker.cpp  sequential_worker.cpp
doc/: FileSystem.md
py/: database.py  main.py
py/app/DataProvider_API/Lixingren/: LixingrenAPI.py
py/app/DataProvider_API/Mairui/: MairuiAPI.py
py/app/Util/: UtilStk.py
